Bug 227651 - The "Never for This Site" button in the walletbar does not work
Summary: The "Never for This Site" button in the walletbar does not work
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-19 12:07 UTC by Panagiotis Papadopoulos
Modified: 2010-02-24 16:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Panagiotis Papadopoulos 2010-02-19 12:07:24 UTC
Version:            (using KDE 4.4.0)
OS:                Linux
Installed from:    openSUSE RPMs

The "Never for This Site" button in the walletbar does not work. The walletbar will still popup the next time you visit the site.

to reproduce:

go to any site, where you can log in, e.g. google, and then enter some false login information. The walletbar will appear. Now click on "Never for this site" and re-enter some falso login information.
THe wallet bar will again popup, despite the fact that you clicked on "Never for this site".

Thanks :-)
Comment 1 Panagiotis Papadopoulos 2010-02-19 12:08:32 UTC
might be related to https://bugs.kde.org/show_bug.cgi?id=227022
Comment 2 Andrea Diamantini 2010-02-19 15:05:16 UTC
On Friday 19 February 2010 12:07:25 Panagiotis Papadopoulos wrote:
> https://bugs.kde.org/show_bug.cgi?id=227651
> 
>            Summary: The "Never for This Site" button in the walletbar does
>                     not work
>            Product: rekonq
>            Version: unspecified
>           Platform: openSUSE RPMs
>         OS/Version: Linux
>             Status: NEW
>           Severity: normal
>           Priority: NOR
>          Component: general
>         AssignedTo: adjam7@gmail.com
>         ReportedBy: pano_90@gmx.net
> 
> 
> Version:            (using KDE 4.4.0)
> OS:                Linux
> Installed from:    openSUSE RPMs
> 
> The "Never for This Site" button in the walletbar does not work. The
> walletbar will still popup the next time you visit the site.
> 
> to reproduce:
> 
> go to any site, where you can log in, e.g. google, and then enter some
> false login information. The walletbar will appear. Now click on "Never
> for this site" and re-enter some falso login information.
> THe wallet bar will again popup, despite the fact that you clicked on
> "Never for this site".
> 
> Thanks :-)

Yes, I know.
I simply forgot to implement it.. :)
(you are clicking an "hide" button..)
Comment 3 Andrea Diamantini 2010-02-24 16:30:10 UTC
Fixed (ehm.. implemented) in 0.3.96