Remember "Never for this site" urls Also if I think this is NOT a proper solution..

BUG:227651